# feedback

./: .gitignore  Cargo.toml  config.toml
migrations/2023-01-03-030756_create_feedback/: down.sql  up.sql
src/: main.rs  schema.rs
src/app/: mod.rs  route.rs
src/app/api/: feedback.rs
src/app/db/: mod.rs
src/app/forms/: feedback.rs
src/app/models/: exception.rs  feedback.rs
