[package]
name = "feedback"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.0"
r2d2 = "0.8.9"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.80"
actix-rt = "2.7.0"
config = "0.13.1"
lazy_static = "1.4.0"

[dependencies.diesel]
features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"]
version = "2.0.2"

[dependencies.diesel_migrations]
features = ["sqlite"]
version = "2.0.0"
